Fix layout issues

--- a/0x03-responsive_design/02-1-styles.css
+++ b/0x03-responsive_design/02-1-styles.css
@@ -168,6 +168,11 @@
   /* Helpers
       ============================= */
   
+  main img {
+    width: 100%;
+    height: auto;
+  }
+  
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
     height: 1px;
@@ -211,6 +216,26 @@
   
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+
+  @media only screen and (max-width: 767px) {
+    :root {
+      --section-padding: 5rem 1rem;
+      --section-body-padding: 2rem 0 0;
+    }
+
+    ul.row, .row {
+      flex-direction: column;
+      margin: 0;
+    }
+
+    [class*="col-"] {
+      margin: 0 0 3rem 0;
+    }
+
+    .col-1-3, .col-1-2 {
+      width: 100%;
+    }
   }
   
   /* Navbar
@@ -260,6 +285,12 @@
   .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+  }
+
+  @media only screen and (max-width: 767px) {
+    .navbar-menu {
+      display: none;
+    }
   }
   
   /* Header
@@ -396,6 +427,11 @@
   /* Section Latest news
       ============================= */
   
+  @media only screen and (max-width: 767px) {
+    .section-latest-news .row {
+      flex-direction: column;
+    }
+  }
   .section-latest-news .row {
     flex-direction: row-reverse;
   }
